--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>2048</title>
+    <link rel="icon" href="images/2048_logo.png" type="image/x-icon" />
 
     <link href="style/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
